v0.3.9 -Fixed the carousel image bug -Wrapped the carousel title in a h1

--- a/src/assets/stylesheets/carousel.css
+++ b/src/assets/stylesheets/carousel.css
@@ -47,10 +47,10 @@
     grid-column-start:3;
     grid-row:2/3; 
     justify-self:start;
-    font-size:2.5em;
     margin-left:30px;
     font-weight:bold;
     color:white;
+    margin-top: 30px;
 }
 
 .carousel-text-content{ 
